[develop]
script_dir=$base/lib/dijk_planner
[install]
install_scripts=$base/lib/dijk_planner

[options.entry_points]
console_scripts =
    maptest3_planner = team12_planner.maptest3_planner:main

[options.package_data]
# include the map files in the wheel / install tree
team12_planner = maps/*.yaml, maps/*.pgm
