[metadata]
name = team12_planner
version = 0.0.0

[options]
packages = find:
install_requires =
    rclpy
include_package_data = True             # keeps the YAML + PGM

[options.package_data]                  # ship the map with the wheel
team12_planner = maps/*.yaml, maps/*.pgm

[options.entry_points]                  # ← the important bit
console_scripts =
    maptest3_planner = team12_planner.maptest3_planner:main
